<resources>
    <string name="app_name">brunel-fyp</string>

    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="existing">Already have an account?</string>
    <string name="intro">New to the app? Register here!</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="warning">Warning</string>
    <string name="sign_up_error">Username/Email already in use. Please pick a different one!</string>

    <string name="trophies">Trophies</string>
    <string name="chatbot">Chatbot</string>
    <string name="profile">Profile</string>
    <string name="try_again_api">Check your internet connection and tap the menu button again - or sign out and sign in again.</string>

    <string name="avatar">Avatar</string>
    <string name="details">Details</string>
    <string name="edit">Edit</string>
    <string name="logout">Log Out</string>

    <string name="cancel">Cancel</string>
    <string name="save_changes">Save Changes</string>

    <!-- Chatbot messages -->
    <string name="intro_message">Hi! I\'m Carl the Chatbot, happy to help. Do you have any items to recycle, or do you need help with something else?</string>
    <string name="other_option_response">Something else? Sure. I can help you out with a few things!</string>
    <string name="other_option_1_response">Trophies are essentially an achievement/reward system.
        \n\nYou can earn trophies for completing various recycling activities.
        \n\nIn the Trophies tab, you can see which ones you\'ve unlocked, and how to get more!
        \n\nGood luck :)</string>
    <string name="other_option_2_response">This is a final year project app, so the features are basically prototypes.
        \n\nWhen you fill out the survey, feel free to tell us what you would like added to the app.</string>
    <string name="recycle_instruction">You would like to recycle an item, sure thing.
        \n\nYou\'ll need to take a photo of the recycling code on the side of the packaging so I can tell you what to do!
    </string>
    <string name="try_again">Hmm, looks like that didn\'t work.
        \n\nLooks like there are some connection issues. Check your internet connection, and let\'s try that again!
    </string>

    <!-- User options -->
    <string name="recycle_option">Recycle</string>
    <string name="other_option">Something else</string>
    <string name="other_option_1">What are trophies and how do I earn them?</string>
    <string name="other_option_2">When is \"x\" feature coming to the app?</string>
    <string name="take_photo">Take Photo</string>
</resources>
