<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileEditActivity">

    <View
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@color/profile_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/bin"
        app:layout_constraintEnd_toStartOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logout" />

    <TextView
        android:id="@+id/cancelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/cancel"
        app:layout_constraintStart_toStartOf="@+id/cancel"
        app:layout_constraintTop_toBottomOf="@+id/cancel" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/banner" />

    <ImageView
        android:id="@+id/saveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/edit" />

    <TextView
        android:id="@+id/saveChangesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save_changes"
        app:layout_constraintEnd_toEndOf="@+id/saveChanges"
        app:layout_constraintStart_toStartOf="@+id/saveChanges"
        app:layout_constraintTop_toBottomOf="@+id/saveChanges" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:hint="@string/username"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        tools:targetApi="o" />

    <TableLayout
        android:layout_width="360dp"
        android:layout_height="275dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/profile_green_lighter"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:contentDescription="@string/profile"
                android:src="@drawable/profile" />

            <TextView
                android:layout_marginStart="10dp"
                android:text="@string/details"
                android:textSize="19sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/firstName"
                android:layout_weight="1"
                android:hint="@string/first_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text=""
                android:textSize="13sp"
                tools:targetApi="o" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/lastName"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text=""
                android:textSize="13sp"
                tools:targetApi="o" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email"
                android:layout_weight="1"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:text=""
                android:textSize="13sp"
                tools:targetApi="o" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/password" />

            <!-- Column so that both items can overlap in the same space-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:maxWidth="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="13sp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:importantForAutofill="no"
                    tools:targetApi="o"
                    tools:ignore="TextFields" />

                <Switch
                    android:id="@+id/passwordSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </TableRow>

    </TableLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>